Fix text overflow on userpage fields

--- a/app/javascript/flavours/glitch/styles/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/accounts.scss
@@ -252,7 +252,7 @@
     box-sizing: border-box;
     padding: 14px;
     text-align: center;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   dt {
